--- a/package.json
+++ b/package.json
@@ -24,12 +24,11 @@
     "Shawn Inder <shawn@vigour.io>"
   ],
   "license": "MIT",
-  "engines": {
-
-  },
+  "engines": {},
   "dependencies": {
     "npmlog": "^2.0.0",
-    "vigour-fs-promised": "^2.0.1"
+    "vigour-fs-promised": "^2.0.1",
+    "vigour-spawn": "^1.0.1"
   },
   "devDependencies": {
     "npmlog": "^2.0.0"
