--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "license": "MIT",
   "engines": {},
   "dependencies": {
+    "ncp": "^2.0.0",
     "npmlog": "^2.0.0",
     "vigour-fs-promised": "^2.0.1",
     "vigour-spawn": "^1.0.1"
