--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "delivers your packages",
   "main": "src/index.js",
   "scripts": {
+    "dev": "npm start && ./node_modules/.bin/bunyan",
     "start": "node index.js",
     "test": "gaston test -r node"
   },
